unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EmailMessage__c</fullName>
    <description>Email Message</description>
    <inlineHelpText>Modifier l’objet de cet e‑mail (jusqu’à 2 000 caractères) pour qu’il apparaisse dans la notification à signer par le destinataire DocuSign.
		</inlineHelpText>
    <label>Email message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>