unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EmailSubject__c</fullName>
    <defaultValue>&quot;Documents for your DocuSign Signature&quot;</defaultValue>
    <description>Email Subject</description>
    <inlineHelpText>Modifier l’objet de cet e‑mail par défaut pour qu’il apparaisse dans le champ d’objet de la notification à signer par les destinataires DocuSign.
		</inlineHelpText>
    <label>Email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>