unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__ExpireAfterDays__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ExpireAfterDays__c</fullName>
    <description>Days before Envelope is Expired/Voided</description>
    <inlineHelpText>Indiquer le délai d’expiration de cette transaction.</inlineHelpText>
    <label>Expire/void envelope in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>