unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__Expires__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign voids the envelope and sends a notification to both sender and recipient.</description>
    <inlineHelpText>Parfois, vous pourriez avoir à encourager vos destinataires à traiter une enveloppe plus rapidement. Lorsqu’une enveloppe expire, DocuSign invalide l’enveloppe et envoie une notification à l’expéditeur et au destinataire.</inlineHelpText>
    <label>Expire envelope</label>
    <type>Checkbox</type>
</CustomField>