unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__ExpireWarnDays__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ExpireWarnDays__c</fullName>
    <description>An email message to alert recipients that a deadline approaches for completing an envelope. This is
			sent only to recipients who have not yet completed the envelope.</description>
    <inlineHelpText>Indiquer combien de jours avant l’expiration un message doit être envoyé aux destinataires pour les avertir qu’une échéance approche. Est envoyé uniquement aux destinataires qui n’ont pas encore complété la transaction.
		</inlineHelpText>
    <label>Warn of expiration in N day(s) prior</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>