unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__Remind__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should a reminder be sent periodically to recipients
			who have not yet completed the envelope?</description>
    <inlineHelpText>Cochez cette case pour qu’un rappel par e‑mail soit envoyé aux destinataires de l’enveloppe n’ayant pas encore terminé leur opération.
		</inlineHelpText>
    <label>Remind signers via email</label>
    <type>Checkbox</type>
</CustomField>