unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__Sent__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Sent__c</fullName>
    <description>Date and time when envelope was sent</description>
    <inlineHelpText>Date et heure de l’envoi</inlineHelpText>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>