unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__SourceId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SourceId__c</fullName>
    <description>Salesforce source ID</description>
    <inlineHelpText>Identifiant source Salesforce</inlineHelpText>
    <label>Salesforce source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>