unpackaged/main/default/objects/dfsle__Envelope__c/fields/dfsle__UpdateChatter__c.field-meta.xml
<CustomField>
    <fullName>dfsle__UpdateChatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sélectionner pour afficher Chatter durant le processus de signature DocuSign.</inlineHelpText>
    <label>Enable Chatter status updates</label>
    <type>Checkbox</type>
</CustomField>