unpackaged/main/default/objects/dfsle__Envelope__c/listViews/dfsle__All.listView-meta.xml
<ListView>
    <fullName>dfsle__All</fullName>
    <columns>NAME</columns>
    <columns>dfsle__Sent__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>dfsle__EmailMessage__c</columns>
    <columns>dfsle__EmailSubject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>vigier</value>
    </filters>
    <label>All</label>
</ListView>